# tony_ai

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/tony/ced/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/tony/: tonyutil.cpp  tonyutil.hpp
app/src/main/java/com/tony/ced/: BaseActivity.java  CvApplication.java  MainActivity.java
app/src/main/java/com/tony/ced/adapter/: BaseListAdapter.java  MainAdapter.java
app/src/main/java/com/tony/ced/bean/: MainItem.java
app/src/main/java/com/tony/ced/dialog/: AlertSheetClickListener.java  AlertSheetDialog.java  IAlertSheetDialog.java
app/src/main/java/com/tony/ced/local/: NativeUtils.java
app/src/main/java/com/tony/ced/n/: FaceDetectionNative.java
app/src/main/java/com/tony/ced/ui/: BaseFeaturesTestingActivity.java  BitmapOptionActivity.java  CameraTestingActivity.java  CardDistinguishActivity.java  FaceBeautyActivity.java  FeatureTestingMatchingActivity.java  GrayImageActivity.java  ImageOptionActivity.java  MapAndBitmapActivity.java  MaskCoveringActivity.java  MatOptionActivity.java  MatPixelOptionActivity.java  TheCartoonFilterActivity.java
app/src/main/java/com/tony/ced/utils/: ActivityUtils.java  BitmapUtil.java  CommonUtils.java  ContextUtils.java  DefaultSkinFinder.java  DisplayUtil.java  (+4 more)
app/src/main/res/anim/: anim_alpha_in.xml  anim_alpha_out.xml
app/src/main/res/drawable/: bg_button.xml  bg_main_line.xml  person_detail_border_bottom.xml
app/src/main/res/layout/: activity_base_features_testing.xml  activity_bitmap_option.xml  activity_camera_testing_layout.xml  activity_card_distinguish.xml  activity_gray_image.xml  activity_main.xml  activity_map_and_bitmap.xml  activity_map_option.xml  activity_mat_pixel_option.xml  activity_the_cartoon_filter.xml  alert_sheet_dialog.xml  alert_sheet_dialog_no_divider.xml  item_alert_list_sheet.xml  item_main.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/tony/ced/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
